--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="ar-container"></div>
 <div id="info-panel">🎯 Marcador detectado</div>
 
-<script>
+<script type="module">
 const startBtn = document.querySelector("#start-btn");
 const infoPanel = document.querySelector("#info-panel");
 
@@ -71,10 +71,11 @@ startBtn.addEventListener("click", async () => {
   startBtn.style.display = "none";
 
   // 1️⃣ Inicializar MindAR
-  mindarThree = new window.MINDAR.IMAGE.MindARThree({
+  const mindarThree = new window.MindARThree({
     container: document.querySelector("#ar-container"),
     imageTargetSrc: "./targets.mind",
   });
+
 
   const { renderer, scene, camera } = mindarThree;
 
