--- a/index.html
+++ b/index.html
@@ -1,126 +1,120 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>MindAR MVP</title>
-
-<!-- Three.js -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.160/build/three.min.js"></script>
-
-<!-- MindAR -->
-<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"></script>
-
-<style>
-  body {
-    margin: 0;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-    background: black;
-  }
-
-  #ar-container {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-  }
-
-  /* Panel informativo overlay */
-  #info-panel {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(0,0,0,0.7);
-    color: white;
-    padding: 12px 20px;
-    border-radius: 8px;
-    display: none;
-  }
-
-  #start-btn {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    padding: 10px 16px;
-    background: #7c3aed;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    z-index: 10;
-  }
-</style>
-</head>
-
-<body>
-
-<button id="start-btn">Iniciar AR</button>
-<div id="ar-container"></div>
-<div id="info-panel">🎯 Marcador detectado</div>
-
-<script type="module">
-const startBtn = document.querySelector("#start-btn");
-const infoPanel = document.querySelector("#info-panel");
-
-let mindarThree;
-let cube;
-
-startBtn.addEventListener("click", async () => {
-
-  startBtn.style.display = "none";
-
-  // 1️⃣ Inicializar MindAR
-  const mindarThree = new window.MindARThree({
-    container: document.querySelector("#ar-container"),
-    imageTargetSrc: "./targets.mind",
-  });
-
-
-  const { renderer, scene, camera } = mindarThree;
-
-  // 2️⃣ Luz
-  const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
-  scene.add(light);
-
-  // 3️⃣ Crear objeto 3D
-  const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
-  const material = new THREE.MeshStandardMaterial({ color: 0x7c3aed });
-  cube = new THREE.Mesh(geometry, material);
-
-  // 4️⃣ Anchor al marcador 0
-  const anchor = mindarThree.addAnchor(0);
-  anchor.group.add(cube);
-
-  // 5️⃣ Eventos del marcador
-  anchor.onTargetFound = () => {
-    console.log("Marcador detectado");
-    infoPanel.style.display = "block";
-  };
-
-  anchor.onTargetLost = () => {
-    console.log("Marcador perdido");
-    infoPanel.style.display = "none";
-  };
-
-  // 6️⃣ Interacción básica (click)
-  window.addEventListener("click", () => {
-    if (cube) {
-      cube.scale.set(1.3,1.3,1.3);
-      setTimeout(() => cube.scale.set(1,1,1), 200);
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+        "mindar-face-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-face-three.prod.js"
+      }
     }
-  });
-
-  // 7️⃣ Loop de animación
-  renderer.setAnimationLoop(() => {
-    cube.rotation.y += 0.01;
-    renderer.render(scene, camera);
-  });
-
-  // 8️⃣ Iniciar cámara
-  await mindarThree.start();
-});
-</script>
-
-</body>
+    </script>
+    <script type="module">
+      import * as THREE from 'three';
+      import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+      import { MindARThree } from 'mindar-face-three';
+      class Avatar {
+        constructor() {
+          this.gltf = null;
+          this.morphTargetMeshes = [];
+        }
+        async init() {
+          const url = "https://assets.codepen.io/9177687/raccoon_head.glb";
+          const gltf = await new Promise((resolve) => {
+            const loader = new GLTFLoader();
+            loader.load(url, (gltf) => {
+              resolve(gltf);
+            });
+          });
+          gltf.scene.traverse((object) => {
+            if ((object).isBone && !this.root) {
+              this.root = object; // as THREE.Bone;
+            }
+            if (!(object).isMesh) return
+            const mesh = object;
+            if (!mesh.morphTargetDictionary || !mesh.morphTargetInfluences) return
+            this.morphTargetMeshes.push(mesh);
+          });
+          this.gltf = gltf;
+        }
+        updateBlendshapes(blendshapes) {
+          const categories = blendshapes.categories;
+          let coefsMap = new Map();
+          for (let i = 0; i < categories.length; ++i) {
+            coefsMap.set(categories[i].categoryName, categories[i].score);
+          }
+          for (const mesh of this.morphTargetMeshes) {
+            if (!mesh.morphTargetDictionary || !mesh.morphTargetInfluences) {
+              continue;
+            }
+            for (const [name, value] of coefsMap) {
+              if (!Object.keys(mesh.morphTargetDictionary).includes(name)) {
+                continue;
+              }
+              const idx = mesh.morphTargetDictionary[name];
+              mesh.morphTargetInfluences[idx] = value;
+            }
+          }
+        }
+      }
+      let mindarThree = null;
+      let avatar = null;
+      const setup = async () => {
+        mindarThree = new MindARThree({
+          container: document.querySelector("#container"),
+        });
+        const { renderer, scene, camera } = mindarThree;
+        const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
+        scene.add(light);
+        const anchor = mindarThree.addAnchor(1);
+        await avatar.init();
+        avatar.gltf.scene.scale.set(2, 2, 2);
+        anchor.group.add(avatar.gltf.scene);
+      }
+      const start = async () => {
+        if (!mindarThree) {
+          await setup();
+        }
+        await mindarThree.start();
+        const { renderer, scene, camera } = mindarThree;
+        const feedVideo = document.querySelector("#video-feed");
+        feedVideo.srcObject = mindarThree.video.srcObject.clone();
+        feedVideo.play();
+        renderer.setAnimationLoop(() => {
+          const estimate = mindarThree.getLatestEstimate();
+          if (estimate && estimate.blendshapes) {
+            avatar.updateBlendshapes(estimate.blendshapes);
+          }
+          renderer.render(scene, camera);
+        });
+      }
+      start();
+    </script>
+    <style>
+      body {
+        margin: 0;
+      }
+      #container {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+      }
+      #video-feed {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 50vw;
+        z-index: 9999999;
+        transform: scaleX(-1);
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container">
+    </div>
+    <video id="video-feed">
+    </video>
+  </body>
 </html>
