--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       import { MindARThree } from 'mindar-image-three';
       const mindarThree = new MindARThree({
 	container: document.querySelector("#container"),
-	imageTargetSrc: "https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.mind"
+	imageTargetSrc: "./targets.mind",
       });
       const {renderer, scene, camera} = mindarThree;
       const anchor = mindarThree.addAnchor(0);
