--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       const mindarThree = new MindARThree({
         container: document.querySelector("#container"),
-        imageTargetSrc: "./targets.mind",
+        imageTargetSrc: "./assets/target/Pachito_1.mind",
       });
 
       const { renderer, scene, camera } = mindarThree;
